# django-webauth

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
.github/workflows/: deploy_demo.yml  release.yml
example/: asgi.py  forms.py  requirements.txt  settings.py  wsgi.py
example/example/: settings.py  urls.py  views.py
example/example/templates/: base.html  home.html
example/example/templates/accounts/: logged_out.html  login.html  password_change_done.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
example/example/templates/django/forms/: label.html
example/example/templates/example/: register.html
example/templates/: private.html  profile.html
example/templates/accounts/: password_change_form.html
example/templates/django/forms/: default.html
webauth/: __init__.py  admin.py  apps.py  backends.py  decorators.py  forms.py  mixins.py  models.py  urls.py  views.py
webauth/migrations/: 0001_initial.py  0002_auto_20210329_1453.py  0003_auto_20210329_1642.py  0004_webauthncredential_raw_id.py  0005_fill_raw_id_from_credential_id.py  0006_unique_raw_id.py  0007_webauthncredential_name.py  0008_populate_webauthncredential_name.py  0009_auto_20210404_0933.py
webauth/static/webauth/: lib.js
webauth/templates/webauth/: authenticate.html  base.html  webauthdevice_confirm_delete.html  webauthdevice_list.html  webauthdevice_verify.html  webauthncredential_confirm_delete.html  webauthncredential_create.html  webauthncredential_detail.html  webauthncredential_list.html
