[metadata]
name = django-webauth
version = 0.0.1
description = Two Factor Authentication in Django using Web Authentication API (WebAuthn).
long_description = file: README.rst
url = https://github.com/asnelling/django-webauth/
author = Addison Snelling
author_email = addison@asnell.io
license = GPL-3.0-only
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    Django >= 3.1.0
    webauthn >= 0.4.7
