[metadata]
name = django-webauth
version = 0.1.1
description = Two Factor Authentication for Django using the Web Authentication API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asnelling/django-webauth/
author = Addison Snelling
author_email = contact@asnell.io
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Security
    Topic :: System :: Systems Administration :: Authentication/Directory

[options]
include_package_data = true
packages = webauth
python_requires = >=3.8
install_requires =
    Django >= 4.0
    webauthn >= 1.2
